feat(refactoring): Refactoring: reviewDiff moved from AbstractAiClient to CodeReviewService  Dead code removed  - 3-arg reviewDiff(String, String, String) — dead code, removed from AiClient interface, AbstractAiClient,  AuditingAiClient, StubAiClient  - 5-arg reviewDiff(String, String, String, String, String) — dead code, removed from all the same places  Responsibility moved  - 6-arg reviewDiff(String, String, String, String, String, String) — the chunking/orchestration logic did not  belong in AbstractAiClient. Moved all of it (diff splitting, chunk iteration, retry-on-prompt-too-long,  message building) into CodeReviewService as private methods:    - reviewDiffWithChunking(...) — the main orchestrator    - reviewSingleChunk(...) — handles retry on prompt-too-long errors    - reviewSingleChunkInternal(...) — builds user message + calls aiClient.submitReviewPrompt(...)    - splitDiffIntoChunks(...), findSplitIndex(...), buildUserMessage(...), truncateDiff(...) + ChunkingResult  record  New interface method  - submitReviewPrompt(String systemPrompt, String modelOverride, String userMessage) added to AiClient — the  single-primitive that CodeReviewService now calls for each chunk. Implemented in AbstractAiClient (resolves  model/prompt, delegates to sendReviewRequest) and AuditingAiClient (delegates).